--- a/client/src/css/Header.css
+++ b/client/src/css/Header.css
@@ -1,4 +1,72 @@
+*{
+    box-sizing: border-box;
+    
+}
+
+body{
+    margin: 0;
+}
+
+.nav-bar{
+
+    background-color: rgb(53, 55, 73);
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    padding: 0 1rem;
+    
+}
+
+.search-bar{
+padding: 2rem;
+margin: 0;
+display: flex;
+gap: 2rem;
+
+}
+
+.nav-bar a{
+    color:azure;
+}
+
 .nav-img{
     width: 20px;
     
 }
+/*
+.nav-bar
+{
+    height: 85px;
+    display: absolute;
+    position: sticky;
+    justify-content: space-between;
+    padding: 0.2rem calc((100vw - 1000px) / 2);
+    z-index: 12;
+    background-color: rgb(204, 132, 240);
+}
+
+link{
+    color: #808080;
+    display: flex;
+    align-items: left;
+    text-decoration: none;
+    padding: 0 1rem;
+    height: 100%;
+    cursor: pointer;
+
+}
+
+div{
+
+    display: flex;
+    align-items: center;
+    margin-right: -24px;
+    margin-right: 24px; 
+     width: 100vw;
+    white-space: nowrap; 
+
+}
+*/
+
