--- a/client/src/css/Header.css
+++ b/client/src/css/Header.css
@@ -15,58 +15,49 @@ body{
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
-    padding: 0 1rem;
-    
-}
-
-.search-bar{
-padding: 2rem;
-margin: 0;
-display: flex;
-gap: 2rem;
-
+  
 }
 
 .nav-bar a{
     color:azure;
+    text-decoration: none;
+    height: 100%;
+    display: flex;
+    align-items: center;
+
+ 
 }
+
+
+.nav-bar p.active
+{
+    background-color: rgb(53, 55, 73);
+}
+
+
+.nav-bar p:hover
+{
+    background-color: rgb(33, 35, 47);
+    text-decoration: underline;
+    font-size: 20px;
+    height: 40px;
+    transition: 0.5s;
+  
+}
+
+
+.search-bar{
+padding: 1rem;
+margin: 0;
+display: flex;
+gap: 2rem;
+list-style: none;
+
+}
+
 
 .nav-img{
     width: 20px;
     
 }
-/*
-.nav-bar
-{
-    height: 85px;
-    display: absolute;
-    position: sticky;
-    justify-content: space-between;
-    padding: 0.2rem calc((100vw - 1000px) / 2);
-    z-index: 12;
-    background-color: rgb(204, 132, 240);
-}
-
-link{
-    color: #808080;
-    display: flex;
-    align-items: left;
-    text-decoration: none;
-    padding: 0 1rem;
-    height: 100%;
-    cursor: pointer;
-
-}
-
-div{
-
-    display: flex;
-    align-items: center;
-    margin-right: -24px;
-    margin-right: 24px; 
-     width: 100vw;
-    white-space: nowrap; 
-
-}
-*/
 
