--- a/client/src/css/Header.css
+++ b/client/src/css/Header.css
@@ -1,3 +1,5 @@
+
+
 *{
     box-sizing: border-box;
     
@@ -9,9 +11,10 @@ body{
 
 .nav-bar{
 
-    background-color: rgb(53, 55, 73);
+    background-color: rgb(38, 39, 52);
     color: white;
     display: flex;
+    position: relative;
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
@@ -20,33 +23,83 @@ body{
 
 .nav-bar a{
     color:azure;
+    position: relative;
+    display: block;
+    color: #fff;
+    text-align: center;
+    padding: 8px 12px;
     text-decoration: none;
-    height: 100%;
-    display: flex;
-    align-items: center;
+    z-index: 0;
 
  
 }
 
-
-.nav-bar p.active
+li a::before
 {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    left: 0;
     background-color: rgb(53, 55, 73);
+    z-index: -1;
+    transform: scale(0);
+    transition: transform 0.5s ease-in-out;
 }
 
+li a:hover::before,
+li a:focus::before{
+    transform: scale(1);
+}
 
-.nav-bar p:hover
+.hover-animation ul{
+
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+.hover-animation li{
+    float: left;
+}
+
+.hover-animation
 {
-    background-color: rgb(33, 35, 47);
-    text-decoration: underline;
-    font-size: 20px;
-    height: 40px;
-    transition: 0.5s;
-  
+    display: inline-block;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    position: relative;
+    color: grey;
 }
 
+.hover-animation::after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #ffffff;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
 
-.search-bar{
+}
+
+.hover-animation:hover
+{
+    transition: .25s;
+}
+
+.hover-animation:hover::after
+{
+    
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+
+.right-nav{
 padding: 1rem;
 margin: 0;
 display: flex;
@@ -55,9 +108,38 @@ list-style: none;
 
 }
 
+input[type="text"] {
+    width: 300px;
+    height: 30px;
+    padding-right: 50px;
+    margin-top: 20px;
+    border: 0ch;
+   
+}
+
+button{
+    margin-left: -80px;
+    height: 30px;
+    width: 50px;
+    margin-top: 20px; 
+    background-color: #fff;
+    border: 0;
+}
 
 .nav-img{
     width: 20px;
     
+}
+
+.nav-img-user
+{
+    margin-right: -60px;
+
+
+}
+.nav-im
+{
+    margin-top: 10px;
+    width: 30px;
 }
 
