--- a/client/src/css/Header.css
+++ b/client/src/css/Header.css
@@ -70,7 +70,6 @@ li a:focus::before{
     display: inline-block;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     position: relative;
-    color: grey;
 }
 
 .hover-animation::after{
@@ -117,7 +116,7 @@ input[type="text"] {
    
 }
 
-button{
+.right-nav button{
     margin-left: -80px;
     height: 30px;
     width: 50px;
@@ -143,3 +142,48 @@ button{
     width: 30px;
 }
 
+.logged-box-item
+{
+
+    position: relative;
+    display: block;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: #fff;
+    text-align: center;
+    padding: 8px 12px;
+    text-decoration: none;
+    z-index: 0;   
+}
+
+.logged-box 
+{
+    display: inline-block;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    position: relative;
+
+}
+
+.sing-out
+{
+    color: #fff;
+}
+
+
+.box-animation p::before
+{
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    left: 0;
+    background-color: rgb(53, 55, 73);
+    z-index: -1;
+    transform: scale(0);
+    transition: transform 0.5s ease-in-out;
+}
+
+.box-animation p:hover::before,
+.box-animation p:focus::before{
+    transform: scale(1);
+}
