--- a/client/src/css/Product.css
+++ b/client/src/css/Product.css
@@ -3,4 +3,11 @@
     width: 300px;
     margin: 5px;
     padding: 10px;
+    
+}
+
+.product-img{
+    height: 400px;
+    width: 250px;
+    object-fit: center;
 }
