--- a/client/src/css/Header.css
+++ b/client/src/css/Header.css
@@ -1,5 +1,3 @@
-
-
 *{
     box-sizing: border-box;
     
@@ -9,20 +7,22 @@ body{
     margin: 0;
 }
 
-.nav-bar{
+.navbar{
 
     background-color: rgb(38, 39, 52);
+    opacity: 90%;
     color: white;
     display: flex;
     position: relative;
+    height: 90px;
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
-  
+    z-index: 100;
 }
 
-.nav-bar a{
-    color:azure;
+.navbar p{
+
     position: relative;
     display: block;
     color: #fff;
@@ -34,7 +34,7 @@ body{
  
 }
 
-li a::before
+li p::before
 {
     position: absolute;
     content: "";
@@ -48,8 +48,8 @@ li a::before
     transition: transform 0.5s ease-in-out;
 }
 
-li a:hover::before,
-li a:focus::before{
+li p:hover::before,
+li p:focus::before{
     transform: scale(1);
 }
 
@@ -111,23 +111,22 @@ input[type="text"] {
     width: 300px;
     height: 30px;
     padding-right: 50px;
-    margin-top: 20px;
+    margin-top: 40px;
     border: 0ch;
    
 }
 
 .right-nav button{
     margin-left: -80px;
-    height: 30px;
+    height: 70px;
     width: 50px;
     margin-top: 20px; 
-    background-color: #fff;
+    background-color: rgb(38, 39, 52);
     border: 0;
 }
 
 .nav-img{
     width: 20px;
-    
 }
 
 .nav-img-user
@@ -138,7 +137,7 @@ input[type="text"] {
 }
 .nav-im
 {
-    margin-top: 10px;
+    margin-top: 35px;
     width: 30px;
 }
 
@@ -186,4 +185,13 @@ input[type="text"] {
 .box-animation p:hover::before,
 .box-animation p:focus::before{
     transform: scale(1);
+}
+
+.sticky
+{
+    position: sticky!important;
+    z-index: 100;
+    top: 0;
+
+
 }
