nav bar and page css
ended navbar, made css to the main page

--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -1,3 +1,5 @@
+
+
 .products-box{
     display: flex;
     flex-flow: row wrap;
@@ -13,6 +15,6 @@
 
 .whole
 {
-    background: rgb(90,14,136);
-    background: linear-gradient(90deg, rgba(90,14,136,1) 0%, rgba(43,43,43,1) 20%, rgba(45,41,47,1) 81%, rgba(90,14,136,1) 100%);
+    background: #20072f;
+    background: linear-gradient(90deg, rgba(32,7,47,1) 0%, rgba(19,18,18,1) 10%, rgba(19,18,18,1) 90%, rgba(32,7,47,1) 100%);
 }
