--- a/client/src/css/Header.css
+++ b/client/src/css/Header.css
@@ -1,15 +1,16 @@
 *{
-    box-sizing: border-box;
-    
+    box-sizing: border-box;    
 }
 
 body{
     margin: 0;
 }
 
+
+
 .navbar{
 
-    background-color: rgb(38, 39, 52);
+    background-color: rgb(23, 24, 31);
     opacity: 90%;
     color: white;
     display: flex;
@@ -111,8 +112,10 @@ input[type="text"] {
     width: 300px;
     height: 30px;
     padding-right: 50px;
-    margin-top: 40px;
+    margin-top: 35px;
     border: 0ch;
+    background-color: rgba(12, 13, 16, 0.762);
+    color:#fff;
    
 }
 
@@ -120,8 +123,8 @@ input[type="text"] {
     margin-left: -80px;
     height: 70px;
     width: 50px;
-    margin-top: 20px; 
-    background-color: rgb(38, 39, 52);
+    margin-top: 18px; 
+    background-color: rgb(23, 24, 31);
     border: 0;
 }
 
@@ -195,3 +198,18 @@ input[type="text"] {
 
 
 }
+
+.nav-logo{
+    height: 90px;
+    margin-left: 40px;
+    transition: all 0.3s ease-in-out 0s;
+
+}
+
+.nav-logo:hover { 
+    cursor: default; 
+    transform: rotate(360deg) scale(1.3); 
+    transition: all 0.7s ease-in-out 0s;
+ }
+
+  
