--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -1,5 +1,5 @@
 
-
+/*
 .products-box{
     display: flex;
     flex-flow: row wrap;
@@ -17,4 +17,80 @@
 {
     background: #20072f;
     background: linear-gradient(90deg, rgba(32,7,47,1) 0%, rgba(19,18,18,1) 10%, rgba(19,18,18,1) 90%, rgba(32,7,47,1) 100%);
+}
+*/
+
+.container
+{
+    padding: 2rem;
+    
+}
+
+.Slide-holder
+{
+    position: relative;
+    max-width: 48rem;
+    margin: 0 auto;
+    
+
+}
+
+.slider{
+    position: relative;
+    display: flex;
+    aspect-ratio: 16 / 9;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    box-shadow: 0 1.5rem 3rem -0.75rem rgb(66, 11, 93);
+    border-radius: 1rem;
+    overflow: hidden;
+    transition: transform 1s;
+    width: 100%;
+    height: 100%;
+
+}
+
+.slider img{
+    position: absolute;
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    width: 100%;
+    height: 100%;
+    transition: transform 1s ease;
+
+}
+
+
+h3
+{
+    color: white;
+}
+
+.slider-nav{
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+    
+}
+
+.slider-nav a {
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
+    background-color: rgb(66, 11, 93);
+    opacity: 0.75;
+    transition: opacity ease 250ms;
+}
+
+.slider-nav a:hover{
+    opacity: 1;
+}
+
+.slide{
+    width: 100%;
+    height: 100%;
 }
