Changed gameData object structure. Also added forwarding the data for Cart component

--- a/client/src/css/Product.css
+++ b/client/src/css/Product.css
@@ -25,3 +25,10 @@
     object-fit: center;
     margin-left: 10px;
 }
+
+
+.product-platform, .buy-button{
+    background-color: #131212;
+    color: aliceblue;
+    margin: 2px;
+}
