--- a/client/src/css/Header.css
+++ b/client/src/css/Header.css
@@ -8,6 +8,8 @@ body{
 
 
 
+
+
 .navbar{
 
     background-color: rgb(23, 24, 31);
@@ -20,6 +22,7 @@ body{
     align-items: center;
     gap: 1rem;
     z-index: 100;
+    
 }
 
 .navbar p{
@@ -60,10 +63,12 @@ li p:focus::before{
     margin: 0;
     padding: 0;
     overflow: hidden;
+    text-decoration: none;
 }
 
 .hover-animation li{
     float: left;
+    text-decoration: none;
 }
 
 .hover-animation
@@ -119,6 +124,10 @@ input[type="text"] {
    
 }
 
+input:focus{
+    outline: none;
+}
+
 .right-nav button{
     margin-left: -80px;
     height: 70px;
@@ -140,8 +149,10 @@ input[type="text"] {
 }
 .nav-im
 {
-    margin-top: 35px;
-    width: 30px;
+    margin-top: 25px;
+    margin-left: 5px;
+    margin-right: -30px;
+    width: 50px;
 }
 
 .logged-box-item
@@ -213,3 +224,46 @@ input[type="text"] {
  }
 
   
+ .hover-animatio{
+     display: inline-block;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    position: relative;
+ }
+
+ .question
+ {
+    color: #fff;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+ }
+
+ .buttons{
+    text-align: center;
+
+ }
+
+.but
+{
+  margin-top: 2rem;
+  background-color: rgba(22, 22, 22, 0.744);
+  border: none;
+  color: white;
+  border-radius: 25px;
+  height: 3rem;
+  width: 6rem;    
+  box-shadow: 10rem;
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 1rem;
+
+}
+
+.but:hover{
+  background-color: rgb(95, 40, 122);
+  box-shadow: 0px 15px 20px rgb(66, 11, 93);
+  color: #fff;
+  transform: translateY(-7px);
+
+}
