--- a/client/src/css/Login.css
+++ b/client/src/css/Login.css
@@ -2,8 +2,56 @@
   text-align: center;
 }
 
-.login-but
+.login-button
 {
-  display: flex;
+  margin-top: 2rem;
+  background-color: rgba(22, 22, 22, 0.744);
+  border: none;
+  color: white;
+  border-radius: 25px;
+  height: 3rem;
+  width: 6rem;    
+  box-shadow: 10rem;
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 1rem;
+}
+
+.login-button:hover{
+  background-color: rgb(95, 40, 122);
+  box-shadow: 0px 15px 20px rgb(66, 11, 93);
+  color: #fff;
+  transform: translateY(-7px);
+
+}
+
+
+.login{
+  color: rgb(180, 52, 244);
+  
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+}
+
+.input_box{
+  margin-top: 1rem;
+  color: white;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  border: none;
+  margin-bottom: 15px;
+  background:rgb(32, 33, 41);
+  padding: 20px;
+  font-size: 16px;
+  border-radius: 10px;
+  box-shadow: inset 5px 5px 5px rgb(19, 20, 24), 
+              inset -5px -5px 5px rgb(28, 30, 35);
+  outline: none;
+}
+
+.login-message{
+  color: white;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
 }
