--- a/client/src/css/Modal.css
+++ b/client/src/css/Modal.css
@@ -3,11 +3,13 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #FFF;
+    background-color: rgb(32, 33, 41);
     padding: 25px;
     z-index: 1000;
     min-width: 25%;
-    min-height: 25%;
+    min-height: 10rem;
+    width: 10rem;
+    border-radius: 25px;
 }
 .background-shade{
     position: absolute;
@@ -17,4 +19,28 @@
     bottom: 0;
     background-color: rgba(0, 0, 0, .7);
     z-index: 1000;
+}
+
+.exit
+{
+    background-color: rgba(22, 22, 22, 0.744);
+    border: none;
+    color: white;
+    border-radius: 25px;
+    height: 2rem;
+    width: 2rem;    
+    box-shadow: 10rem;
+    box-shadow: 0 1.5rem 3rem -0.75rem rgb(66, 11, 93);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+
+}
+
+.exit:hover
+{
+    background-color: rgb(95, 40, 122);
+    box-shadow: 0px 15px 20px rgb(66, 11, 93);
+    color: #fff;
+    transform: translateY(-7px);
 }
