--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -6,12 +6,6 @@
     justify-content: space-evenly;
 }
 
-.page
-{
-    margin-left: 13rem;
-    margin-right: 13rem;
-    background: transparent;
-}
 
 .whole
 {
@@ -19,6 +13,13 @@
     background: linear-gradient(90deg, rgba(32,7,47,1) 0%, rgba(19,18,18,1) 10%, rgba(19,18,18,1) 90%, rgba(32,7,47,1) 100%);
 }
 */
+.page
+{
+    margin-left: 13rem;
+    margin-right: 13rem;
+    background: transparent;
+}
+
 
 .container
 {
@@ -81,4 +82,68 @@ h3
 .slide{
     width: 100%;
     height: 100%;
+}
+
+.Big_three{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+
+
+}
+
+
+
+
+.three_genres{
+    display: flex;
+    flex-direction: row;
+}
+
+.lol button{
+    height: 1rem;
+    font-size: 13px;
+}
+
+.lol img{
+    height: 10rem;
+    width: 10rem;
+    border-radius: 10px;
+    margin-left: 7rem;
+
+}
+
+.lol{
+    display: flex;
+    flex-flow: row wrap;    
+    justify-content: space-evenly;
+}
+
+.lol .product-box{
+    height: 26rem;
+    width: 24rem;
+    margin-left: -5rem;
+}
+
+.lol .product-box:hover{
+    box-shadow: 0 0 11px rgb(96, 18, 117); 
+    transform:scale(1.02); 
+    transition: all 0.1s ease-in-out 0s;
+}
+
+.lol h3{
+    margin-left: 7rem;
+}
+
+
+h3
+{
+    color: white;
+}
+
+label{
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
 }
