register css fixed

--- a/client/src/css/Register.css
+++ b/client/src/css/Register.css
@@ -10,7 +10,6 @@
     color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     border: none;
-    margin-bottom: 15px;
     background:rgb(32, 33, 41);
     padding: 20px;
     font-size: 16px;
@@ -22,10 +21,34 @@
 
 .date{
     margin-right: 2rem;
+
 }
 
 .par{
     text-align: center;
     color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.cal{
+    background-color: rgb(19, 20, 24);
+    color: white;
+}
+
+.woj{
+    background-color: rgb(19, 20, 24);
+    color: white;
+    width: 19rem;
+    height: 2rem;
+    font-size: 1rem;
+    text-align: center;
+    margin-top: 1rem;
+    border-radius: 10px;
+    border: none;
+    box-shadow: inset 5px 5px 5px rgb(19, 20, 24), 
+                inset -5px -5px 5px rgb(28, 30, 35);
+}
+
+.date-form{
+    margin-top: 1rem;
 }
