--- a/client/src/css/Product.css
+++ b/client/src/css/Product.css
@@ -8,7 +8,7 @@
     position: relative;
     color: aliceblue;
     transition: all 0.3s ease-in-out 0s;
-    background-color: #131212;
+    background-color: red;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin-bottom: 50px;
     margin-top: 50px;
@@ -27,8 +27,8 @@
 
 .product-img{
 
-    height: 320px;
-    width: 250px;
+    height: 100%;
+    width: 100%;
     position: absolute;
     margin: auto;
     top: 1;
