--- a/client/src/css/Modal.css
+++ b/client/src/css/Modal.css
@@ -44,3 +44,38 @@
     color: #fff;
     transform: translateY(-7px);
 }
+
+.butt p{
+    display: flex;
+    margin-left: 6rem;
+}
+
+.butt
+{
+  margin-top: 2rem;
+  background-color: rgba(22, 22, 22, 0.744);
+  border: none;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  border-radius: 25px;
+  height: 3rem;
+  width: 100%;
+  align-items: center;
+  box-shadow: 10rem;
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 1rem;
+
+}
+
+.butt:hover{
+  background-color: rgb(95, 40, 122);
+  box-shadow: 0px 15px 20px rgb(66, 11, 93);
+  color: #fff;
+  transform: translateY(-7px);
+
+}
