Finished AddGame component
Also some minor fixes.

--- a/client/src/css/Register.css
+++ b/client/src/css/Register.css
@@ -1,6 +1,7 @@
 .title_R{
-    color: white;
+    color: rgb(180, 52, 244);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
 
 }
 
